--- a/client/index.html
+++ b/client/index.html
@@ -17,7 +17,7 @@
 	    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
    	    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
    	    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-
+        <script src="http://fb.me/react-js-fiddle-integration.js"></script>
     </head>
     <body>
     </body>
