--- a/client/index.html
+++ b/client/index.html
@@ -3,7 +3,7 @@
 <html>
     <head>
         <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-        <title>alt react-router example</title>
+        <title>Quản lý điểm</title>
 
         <link rel="stylesheet" href="public/stylesheets/styles.css"/>        
 	    <link href="util/css/theme.css" rel="stylesheet">
@@ -17,8 +17,11 @@
 	    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
    	    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
    	    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-        <script src="http://fb.me/react-js-fiddle-integration.js"></script>
-    </head>
+
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/css/materialize.min.css">
+          <!-- Compiled and minified JavaScript -->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/js/materialize.min.js"></script>
+        
     <body>
     </body>
     <script type="text/javascript" src="public/js/bundle.js"></script>
