--- a/client/index.html
+++ b/client/index.html
@@ -26,5 +26,11 @@
     <body>
     </body>
     <script type="text/javascript" src="public/js/bundle.js"></script>
-
+    <script type="text/javascript">
+    $(window).load(function(){
+      $('.form-group input').on('focus blur', function (e) {
+          $(this).parents('.form-group').toggleClass('active', (e.type === 'focus' || this.value.length > 0));
+      }).trigger('blur');
+    });
+</script>
 </html>
